<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Expire</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pin">PIN</string>
    <string name="title_activity_pin_login">Pin_login</string>
    <string name="tab_words">Words</string>
    <string name="tab_numbers">Numbers</string>
    <string name="start_string">Start by providing some basic information</string>
    <string name="you_string">You have</string>
    <string name="ex_string">expiry</string>
    <string name="card_string">Card index</string>
    <string name="select_string">Select Category</string>
    <string name="set_string">Set Notification Period</string>
    <string name="expiry_string">Expiry</string>
    <string name="zero_string">0</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="card_index">Card Index</string>
    <string name="you_have">You have</string>
    <string name="expiries">expiries</string>
    <string name="search_hint">Enter text here to search</string>
    <string name="card_name_hint">Enter card name</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="scan_token">cd1d8e177ae94c3e8b74f7c32583f63f</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="user_name_hint">Display Name</string>
    <string name="pin_hint">Pin Number</string>
    <string name="password_hint">Password</string>
    <string name="register_your_device">REGISTER YOUR DEVICE</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_card_detail">CardDetailActivity</string>
    <string name="title_activity_camera">CameraActivity</string>

</resources>
